--- a/src/todo/TodoList.css
+++ b/src/todo/TodoList.css
@@ -5,7 +5,7 @@
     border: 2px solid black;
 }
 
-.todo__list-title {
+.todo__list-header-title {
     font-size: 2rem;
 }
 
@@ -14,7 +14,7 @@
 }
 
 @media(max-width: 1024px) {
-    .todo__list-title { 
+    .todo__list-header-title { 
         font-size: 1.8rem;
     }
 }
@@ -26,7 +26,7 @@
     .todo__list {
         padding-right: 8rem;
     }
-    .todo__list-title {
+    .todo__list-header-title {
         font-size: 1.6rem;
     }
 }
@@ -35,7 +35,7 @@
     .todo__list-container {
         border: 1.2px solid black;
     }
-    .todo__list-title {
+    .todo__list-header-title {
         font-size: 1.2rem;
     }
 }
@@ -44,7 +44,7 @@
     .todo__list-container {
         border: 1px solid black;
     }
-    .todo__list-title {
+    .todo__list-header-title {
         text-align: center;
         font-size: 1.5rem;
     }
