--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ body {
   display: flex;
   width: 40px;
   height: 40px;
-  background-color: #3361dd;
+  background-color: #2c2c2c;
   border-radius: 50%;
   margin-left: auto;
   margin-right: 2px;
